--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
@@ -8,7 +7,37 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Font Awesome
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+.navbar-brand {
+  font-size: 22px;
+  font-family: 'Pacifico', cursive;
+}
+.avater_img {
+  margin-left: 25px;
+  margin-right: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+}
+.post_top{
+  height: 70px;
+}
+.post_top_img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+.like {
+  font-size: 26px;
 }
